# pps

./: Makefile  README.md  analyze_project_size.py  config.json  manual_size_analysis.py  output.json  pytest.ini  requirements.txt  run_scraper.py  run_tests.py  sanity_check.py
doc/: __init__.py
doc/psense/: __init__.py  data_element.py  parsers.py
notes/: doc_structure.md  parsers_evaluation.md  scraper.md
parsers/: __init__.py
parsers/psense/: __init__.py  document_processor.py
parsers/psense/pdf/: __init__.py  config_manager.py  document.py  error_handler.py  logging_utils.py  pdf_parser.py  performance_monitor.py  pyproject.toml
parsers/psense/pdf/stages/: __init__.py  citation_extraction_stage.py  classification_stage.py  clause_classification_stage.py  entity_extraction_stage.py  layout_analysis_stage.py  metadata_extraction_stage.py  ocr_stage.py  page_processing_stage.py  parsing_stage.py  structural_segmentation_stage.py
parsers/psense/pdf/utils/: __init__.py  citation_utils.py  classification_utils.py  clause_classification_utils.py  entity_extraction_utils.py  layout_utils.py  metadata_utils.py  ocr_utils.py  page_processing_utils.py  pdf_utils.py  structural_segmentation_utils.py  table_figure_utils.py  text_cleaning_utils.py  text_correction_utils.py
scrapers/: __init__.py
scrapers/psense/: __init__.py
tests/: __init__.py  conftest.py  integration_summary.py  integration_test.py  test_import.py  test_multilingual_integration.py  test_parsers_demo.py
tests/parsers/: __init__.py  test_all_parsers.py  test_parser_integration.py  (+2 more)
(+54 files in other folders)
